--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li> <a href="#">Perfil</a></li>
                     <li> <a href="#">Proyectos</a></li>
                     <li> <a href="#">Referencias</a></li>
-                    <li> <a href="#">Exoeriencia</a></li>
+                    <li> <a href="#">Experiencia</a></li>
                 </ul>
             </nav>
             <div class="container-logo">
@@ -60,7 +60,7 @@
                 <h2>Proyectos</h2>
                 <div class="section-projects-card">
                     <div class="container-img-card">
-                        <img src="assets/images/proyectoUber.png" style="width: 280px; height: 200px;" alt="">
+                        <img src="assets/images/proyectoUber.png" style="width: 250px; height: 200px;" alt="">
                     </div>
                     <div class="container-description-card">
                         <h3>Pagina Uber</h3>
@@ -68,7 +68,7 @@
                         <button>Ir al proyecto</button>
                     </div>
                     <div class="container-img-card">
-                        <img src="assets/images/proyectoDiscord.png" style="width: 280px; height: 200px;" alt="">
+                        <img src="assets/images/proyectoDiscord.png" style="width: 250px; height: 200px;" alt="">
                     </div>
                     <div class="container-description-card">
                         <h3>Pagina discord</h3>
